Wrap contact details correctly
Make them each into inline blocks so they wrap as a complete thing, not on word breaks.

--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -12,26 +12,26 @@
   <div class='<%= @member.supporter? ? '' : 'organization-content' %>'>
   
     <div>
-      <span class='contact-detail'>
+      <div class='contact-detail'>
         <i class='icon icon-home'></i> <a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
-      </span>
+      </div>
 
       <% if @preview || @organization.cached_contact_name %>
-        <span data-bind="visible: contactName().length > 0" class='contact-detail'>
+        <div data-bind="visible: contactName().length > 0" class='contact-detail'>
           <i class='icon-user'></i> <span property="contactPoint" data-bind="text: contactName"><%= organization.cached_contact_name %></span>
-        </span>
+        </div>
       <% end %>
     
       <% if @preview || @organization.cached_contact_email %>
-        <span data-bind="visible: contactEmail().length > 0" class='contact-detail'>
+        <div data-bind="visible: contactEmail().length > 0" class='contact-detail'>
           <i class='icon-envelope-alt'></i> <a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
-        </span>
+        </div>
       <% end %>
     
       <% if @preview || @organization.cached_contact_phone %>
-        <span data-bind="visible: contactPhone().length > 0" class='contact-detail'>
+        <div data-bind="visible: contactPhone().length > 0" class='contact-detail'>
           <i class='icon-phone-sign'></i> <span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
-        </span>
+        </div>
       <% end %>
     </div>
 
@@ -45,21 +45,21 @@
     
     <div>
       <% if @preview || @organization.cached_twitter %>
-        <span data-bind="visible: twitter().length > 0" class='contact-detail'>
+        <div data-bind="visible: twitter().length > 0" class='contact-detail'>
           <i class='icon-twitter'></i> <a data-bind="text: twitter, attr: {href: twitterUrl}" href='http://twitter.com/<%= organization.cached_twitter %>'><%= organization.cached_twitter %></a>
-        </span>
+        </div>
       <% end %>
 
       <% if @preview || @organization.cached_facebook %>
-        <span data-bind="visible: facebook().length > 0" class='contact-detail'>
+        <div data-bind="visible: facebook().length > 0" class='contact-detail'>
           <i class='icon-facebook'></i> <a data-bind="text: facebookLabel, attr: {href: facebook}" href='<%= organization.cached_facebook %>'><%= organization.cached_facebook.split('/').last %></a>
-        </span>
+        </div>
       <% end %>
 
       <% if @preview || @organization.cached_linkedin %>
-        <span data-bind="visible: linkedin().length > 0" class='contact-detail'>
+        <div data-bind="visible: linkedin().length > 0" class='contact-detail'>
           <i class='icon-linkedin-sign'></i> <a data-bind="text: linkedinLabel, attr: {href: linkedin}" href='<%= organization.cached_linkedin %>'><%= organization.cached_linkedin.split('/').last %></a>
-        </span>
+        </div>
       <% end %>
     </div>
 
