--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     		<nav>
     			<div id="mainnav" class="navbar navbar-inverse">
     				<div class="navbar-inner">
-  						<a class="brand" href="/">Member Directory</a>
+  						<a class="brand" href="/members">Members</a>
     					<ul class="nav">
               </ul>
     					<ul class="nav pull-right">
