--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,7 @@
     <header id="header">
     	<div class="container">
     		<div class="branding">
-    	  	<a id="logo" rel="home" title="Home" href="/">
-    				<img width="131" height="54" class="b_png" alt="Home" src="http://theodi.org/sites/default/files/logo.png">
-    			</a>
+    	  	<a id="logo" rel="home" title="Home" href="/"><img width="131" height="54" class="b_png" alt="Home" src="http://theodi.org/sites/default/files/logo.png"></a>
     			<hgroup id="name-and-slogan">
     				<h1 id="site-name">
     					<a rel="home" title="Open Data Institute" href="http://theodi.org/">
