--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -63,6 +63,10 @@
       <% end %>
     </div>
 
+    <p>
+      <em>Member since: <%= @member.created_at.strftime("%B %Y")%></em>
+    </p>
+
   </div>
 
   <% if @preview %>
