--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -12,46 +12,55 @@
   <div class='<%= @member.supporter? ? '' : 'organization-content' %>'>
   
     <p>
-      <div class='contact-detail'>
+      <span class='contact-detail'>
         <i class='icon icon-home'></i> <a property="url" data-bind="text: url, attr: {href: url}" href='<%= organization.url %>'><%= organization.url%></a>
-      </div>
+      </span>
 
-      <% if @preview || organization.cached_contact_name.present? %>
-        <div data-bind="visible: contactName().length > 0" class='contact-detail'>
-          <i class='icon-user'></i> <span property="contactPoint" data-bind="text: contactName"><%= organization.cached_contact_name %></span>
-        </div>
-      <% end %>
-    
-      <% if @preview || organization.cached_contact_email.present? %>
-        <div data-bind="visible: contactEmail().length > 0" class='contact-detail'>
-          <i class='icon-envelope-alt'></i> <a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
-        </div>
-      <% end %>
-    
-      <% if @preview || organization.cached_contact_phone.present? %>
-        <div data-bind="visible: contactPhone().length > 0" class='contact-detail'>
-          <i class='icon-phone-sign'></i> <span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
-        </div>
-      <% end %>
-    </p>
-
-    <p>
       <% if @preview || organization.cached_twitter.present? %>
-        <div data-bind="visible: twitter().length > 0" class='contact-detail'>
-          <%= image_tag 'twitter-16x16.png' %> <a data-bind="text: twitter, attr: {href: twitterUrl}" href='http://twitter.com/<%= organization.cached_twitter %>'><%= organization.cached_twitter %></a>
-        </div>
+        <span data-bind="visible: twitter().length > 0" class='contact-detail' property='contactPoint' typeof='ContactPoint'>
+          <span property='description' class='contact-point-description'>Twitter</span>
+          <%= image_tag 'twitter-16x16.png', :alt => "Twitter" %>
+          <a property='url' data-bind="text: twitter, attr: {href: twitterUrl}" href='http://twitter.com/<%= organization.cached_twitter %>'><%= organization.cached_twitter %></a>
+        </span>
       <% end %>
 
       <% if @preview || organization.cached_facebook.present? %>
-        <div data-bind="visible: facebook().length > 0" class='contact-detail'>
-          <%= image_tag 'facebook-16x16.png' %> <a data-bind="text: facebookLabel, attr: {href: facebook}" href='<%= organization.cached_facebook %>'><%= organization.cached_facebook.try(:split, '/').try(:last) %></a>
-        </div>
+        <span data-bind="visible: facebook().length > 0" class='contact-detail' property='contactPoint' typeof='ContactPoint'>
+          <span property='description' class='contact-point-description'>Facebook</span>
+          <%= image_tag 'facebook-16x16.png', :alt => "Facebook" %>
+          <a property='url' data-bind="text: facebookLabel, attr: {href: facebook}" href='<%= organization.cached_facebook %>'><%= organization.cached_facebook.try(:split, '/').try(:last) %></a>
+        </span>
       <% end %>
 
       <% if @preview || organization.cached_linkedin.present? %>
-        <div data-bind="visible: linkedin().length > 0" class='contact-detail'>
-          <%= image_tag 'linkedin-16x16.png' %> <a data-bind="text: linkedinLabel, attr: {href: linkedin}" href='<%= organization.cached_linkedin %>'><%= organization.cached_linkedin.try(:split, '/').try(:last) %></a>
-        </div>
+        <span data-bind="visible: linkedin().length > 0" class='contact-detail' property='contactPoint' typeof='ContactPoint'>
+          <span property='description' class='contact-point-description'>Linkedin</span>
+          <%= image_tag 'linkedin-16x16.png', :alt => "Linkedin" %>
+          <a property='url' data-bind="text: linkedinLabel, attr: {href: linkedin}" href='<%= organization.cached_linkedin %>'><%= organization.cached_linkedin.try(:split, '/').try(:last) %></a>
+        </span>
+      <% end %>
+    </p>
+
+    <p property='contactPoint' typeOf="ContactPoint">
+      
+      <span property='description' class='contact-point-description'>Sales contact</span>
+
+      <% if @preview || organization.cached_contact_name.present? %>
+        <span data-bind="visible: contactName().length > 0" class='contact-detail'>
+          <i class='icon-user'></i> <span property="name" data-bind="text: contactName"><%= organization.cached_contact_name %></span>
+        </span>
+      <% end %>
+    
+      <% if @preview || organization.cached_contact_email.present? %>
+        <span data-bind="visible: contactEmail().length > 0" class='contact-detail'>
+          <i class='icon-envelope-alt'></i> <a property="email" data-bind="text: contactEmail, attr: {href: mailto}" href='mailto:<%= organization.cached_contact_email %>'><%= organization.cached_contact_email %></a>
+        </span>
+      <% end %>
+    
+      <% if @preview || organization.cached_contact_phone.present? %>
+        <span data-bind="visible: contactPhone().length > 0" class='contact-detail'>
+          <i class='icon-phone-sign'></i> <span property="telephone" data-bind="text: contactPhone"><%= organization.cached_contact_phone %></span>
+        </span>
       <% end %>
     </p>
 
