Fix display bug when changing email address

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -23,7 +23,7 @@
   	</div>
   
     <% if @member.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <div>Currently waiting confirmation for: <%= @member.unconfirmed_email %></div>
     <% end %>
   
   <fieldset>   
