Add UI for newsletter flag

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -26,6 +26,10 @@
       <div>Currently waiting confirmation for: <%= @member.unconfirmed_email %></div>
     <% end %>
   
+    <%= form_field f, :cached_newsletter do %>
+      <%= f.check_box :cached_newsletter %>
+    <% end %>
+  
   <fieldset>   
     <% render :partial => 'devise/registrations/member_details', :locals => { :f => f } %>
   </fieldset>
