--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,9 @@
     					<ul class="nav pull-right">
                 <% if signed_in? %>
                   <li><%= link_to "My Account", member_path(current_member) %></li>
-                  <li><%= link_to "Sign out", session_path, :method => :delete %></li>
+                  <li><%= link_to "Sign out", member_session_path, :method => :delete %></li>
                 <% else %>
-                  <li><%= link_to "Sign in", new_session_path %></li>
+                  <li><%= link_to "Sign in", new_member_session_path %></li>
                 <% end %>
     					</ul>
     				</div>
