--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -1,10 +1,10 @@
-<p>Dear <%= @resource.contact_name %></p>
+<p>Dear <%= @resource.contact_name %>,</p>
 
 <p>We are delighted to have you join us at the Open Data Institute.</p>
 
 <p>We run a free to attend lecture series every Friday highlighting some of the awe inspiring work going on using Open Data - everything from data as art, through to the CTO of the World Bank giving a 'fireside chat' about his experience at the White House. You can register for upcoming talks here: <a href="http://www.theodi.org/lunchtime-lectures">http://www.theodi.org/lunchtime-lectures</a></p>
 
-<p>Your membership number is <%= @resource.membership_number %></p>
+<p>Your membership number is <%= @resource.membership_number %>.</p>
 
 <p>We are just drawing up your invoice and it will be sent to you shortly. In the meantime, you can confirm your account email and change your details through the link below:</p>
 
