Add note about needing membership number to log in

--- a/app/views/capsule_signup_mailer/confirmation.html.erb
+++ b/app/views/capsule_signup_mailer/confirmation.html.erb
@@ -4,7 +4,7 @@
 
 <p>We run a free to attend lecture series every Friday highlighting some of the awe inspiring work going on using Open Data - everything from data as art, through to the CTO of the World Bank giving a 'fireside chat' about his experience at the White House. You can register for upcoming talks here: <a href="http://www.theodi.org/lunchtime-lectures">http://www.theodi.org/lunchtime-lectures</a></p>
 
-<p>Your membership number is <%= @member.membership_number %>.</p>
+<p>Your membership number is <%= @member.membership_number %>. You will need this to log in.</p>
 
 <p>You can set up your account password and change your details through the link below:</p>
 
