Address email to contact name, or "member" if not available.

--- a/app/views/capsule_signup_mailer/confirmation.html.erb
+++ b/app/views/capsule_signup_mailer/confirmation.html.erb
@@ -1,4 +1,4 @@
-<p>Dear <%= @member.email %>,</p>
+<p>Dear <%= @member.contact_name || "member" %>,</p>
 
 <p>We are delighted to have you join us at the Open Data Institute.</p>
 
