Added signature to the /assets/ directory

--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -16,6 +16,6 @@
 
 <p>Regards</p>
 
-<img src="http://members.theodi.org/signature.png" alt="" />
+<img src="http://directory.theodi.org/assets/signature.png" alt="" />
 
 <p>Richard</p>
