Highlight required form fields for organizations

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -45,3 +45,7 @@ span.contact-detail {
 span.contact-point-description {
   display: none;
 }
+
+#organization-details input:required, #organization-details textarea:required {
+	background-color: #FFC;
+}
