--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -34,7 +34,7 @@
     <% render :partial => 'devise/registrations/member_details', :locals => { :f => f } %>
   </fieldset>
   
-  <fieldset>   
+  <fieldset id='organization-details'>   
     
     <legend>Organisation Details</legend>
     
