--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,9 +1,12 @@
-<div class="btn-toolbar">
+<% @organizations.each do |organization| %>
+  <%= render :partial => 'organizations/summary', :locals => {:organization => organization}%>
+<% end %>
+
+<div class="btn-toolbar pull-right">
   <div class="btn-group">
     <a href="/members.json" class="btn" title="Get this data in JSON format"><i class="icon-list"></i> JSON</a>
   </div>
 </div>
 
-<% @organizations.each do |organization| %>
-  <%= render :partial => 'organizations/summary', :locals => {:organization => organization}%>
-<% end %>
+<div style='clear:right'>
+</div>
