Add rel=alternate to json link

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="btn-toolbar pull-right">
   <div class="btn-group">
-    <a href="/members.json" class="btn" title="Get this data in JSON format"><i class="icon-list"></i> JSON</a>
+    <a href="/members.json" class="btn" title="Get this data in JSON format" rel="alternate" type="application/json"><i class="icon-list"></i> JSON</a>
   </div>
 </div>
 
