Move alternate button into a helper for reuse
includes auto-lookup of mime type for requested format

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,12 +4,7 @@
 
 <div class="btn-toolbar pull-right">
   <div class="btn-group">
-    <%= link_to "<i class='icon-list'></i> JSON".html_safe, 
-        alternate_url(:format => :json), 
-        :rel => 'alternate', 
-        :type => 'application/json',
-        :class => "btn",
-        :title => "Get this data in JSON format" %>
+    <%= alternate_button(:json) %>
   </div>
 </div>
 
