--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -2,11 +2,4 @@
   <%= render :partial => 'organizations/summary', :locals => {:organization => organization}%>
 <% end %>
 
-<div class="btn-toolbar pull-right">
-  <div class="btn-group">
-    <%= alternate_button(:json) %>
-  </div>
-</div>
-
-<div style='clear:right'>
-</div>
+<%= render 'shared/alternate_formats' %>
