Add alternate format links to individual member page

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -4,3 +4,7 @@
 </ul>
 
 <%= render :partial => 'organizations/organization', :locals => {:organization => @organization}%>
+
+<div style='clear:right'></div>
+
+<%= render 'shared/alternate_formats' %>
