--- a/app/views/shared/_alternate_formats.html.erb
+++ b/app/views/shared/_alternate_formats.html.erb
@@ -1,8 +1,14 @@
-<div class="btn-toolbar pull-right">
-  <div class="btn-group">
-    <%= alternate_button(:json) %>
-  </div>
-</div>
+<% unless @alternate_formats.nil? || @alternate_formats.empty? %>
 
-<div style='clear:right'>
-</div>
+  <div class="btn-toolbar pull-right">
+    <div class="btn-group">
+      <% @alternate_formats.each do |format| %>
+        <%= alternate_button(format) %> 
+      <% end %>
+    </div>
+  </div>
+
+  <div style='clear:right'>
+  </div>
+  
+<% end %>
