--- a/app/views/shared/_alternate_formats.html.erb
+++ b/app/views/shared/_alternate_formats.html.erb
@@ -2,9 +2,7 @@
 
   <div class="btn-toolbar pull-right">
     <div class="btn-group">
-      <% @alternate_formats.each do |format| %>
-        <%= alternate_button(format) %> 
-      <% end %>
+      <%= alternate_link_buttons %>
     </div>
   </div>
 
