--- a/app/views/errors/server_error.html.erb
+++ b/app/views/errors/server_error.html.erb
@@ -1,4 +1,4 @@
-<h1>Page not found</h1>
+<h1>Server Error</h1>
 <p>
   Sorry, we appear to have encountered some sort of problem. It has been logged, and
   we'll look into it shortly.
