Update theme and header to use new logo.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,8 @@
     <header id="header">
     	<div class="container">
     		<div class="branding">
-    	  	<a id="logo" rel="home" title="Home" href="http://theodi.org"><img width="131" height="54" class="b_png" alt="Home" src="http://theodi.org/sites/default/files/logo.png"></a>
-    			<hgroup id="name-and-slogan">
-    				<h1 id="site-name">
-    					<a rel="home" title="Open Data Institute" href="http://theodi.org/">
-    	          <img width="326" height="30" class="b_png" alt="Open Data Institute" src="http://theodi.org/sites/default/files/logo_a.png">                            
-    	        </a>
-    	      </h1>
+    	  	<a id="logo" rel="home" title="Home" href="http://theodi.org"><img width="207" height="48" alt="Home" src="http://theodi.org/sites/default/files/odi_header_logo.svg"></a>
+    			<hgroup id="name-and-slogan" class="hidden-phone">
     	      <h2 id="site-slogan">Knowledge for everyone</h2>
     			</hgroup>
     		</div>
