--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Dear <%= @resource.contact_name %>,</p>
+<p><%= greeting(@member) %>,</p>
 
 <p>We are delighted to have you join us at the Open Data Institute.</p>
 
