--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -6,12 +6,16 @@
   <div class='organization-content'>
     <h2 property="name"><%= link_to organization.name, organization.member %></h2>
 
+    <p>
+      <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.capitalize %></span>
+    </p>
+
     <% if organization.cached_tagline.present? %>
       <p><strong><%= organization.cached_tagline %></strong></p>
     <% end %>
 
     <i class='icon icon-home'></i> <%= link_to organization.url, organization.url, :property => "url"%></a>
-
+    
     <div class='organization-description clearfix'>
       <p property="description"><%= organization_description(organization) %></p>
       <%= link_to "#{organization.member == current_member ? "Edit" : "More"} information &raquo;".html_safe, organization.member, :class=>'btn btn-small btn-primary pull-right' %>
