--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -1,5 +1,3 @@
-<h1><%= @title %></h1>
-
 <p class="lead">
   We're delighted that you would like to join us at ODI. We'd love to talk to you to discuss 
   how we can work together. Fill in the form below, and we'll be in touch as soon as we can.
@@ -61,6 +59,6 @@
   <%= f.hidden_field :product_name, :value => @product_name %>
 
   <div class="form-actions">
-    <%= f.submit 'Contact me', :class => 'btn btn-primary' %>
+    <%= f.submit 'Contact me', :class => 'btn btn-primary btn-large' %>
   </div>
 <% end %>
