--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Resend confirmation instructions</h2>
+<% @title = "Resend confirmation instructions" %>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post, :class => 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
@@ -11,6 +11,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.submit "Resend confirmation instructions", :class => 'btn btn-primary' %>
+    <%= f.submit "Resend confirmation instructions", :class => 'btn btn-primary btn-large' %>
   </div>
 <% end %>
