--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -19,6 +19,6 @@
   </div>
 
   <div class='form-actions'>
-    <%= f.submit "Change my password", :class => 'btn btn-primary' %>
+    <%= f.submit "Change my password", :class => 'btn btn-primary btn-large' %>
   </div>
 <% end %>
