--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,3 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal'}) do |f| %>
   <%= devise_error_messages! %>
   <p class="lead">
@@ -32,6 +30,8 @@
   	</div>
     
   </fieldset>
+
+  <hr class="heavy">
   	  	
   	<h2>Terms and conditions</h2>
   	
@@ -52,7 +52,7 @@
   </fieldset>
 
   <div class="form-actions">
-    <%= f.submit "Sign up", :id => 'submit', :class => 'btn btn-primary' %>
+    <%= f.submit "Sign up", :id => 'submit', :class => 'btn btn-primary btn-large' %>
     or <%= link_to "Sign in", new_session_path(resource_name) %>
   </div>
   
