--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,5 +1,3 @@
-<h2>Edit your details</h2>
-
 <%= form_for(@member, :html => { :method => :put, :class => 'form-horizontal' }) do |f| %>
   <%= error_messages(@member) %>
   
@@ -103,6 +101,6 @@
   <% end %>
 
   <div class="form-actions">
-    <%= f.submit "Save", :id => 'save', :class => 'btn btn-primary' %>
+    <%= f.submit "Save", :id => 'save', :class => 'btn btn-primary btn-large' %>
   </div>
 <% end %>
