--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -4,11 +4,7 @@
        style='background-image: url(<%= organization.logo.rectangular.url %>)'>
   </div>
   <div class='organization-content'>
-    <h2 property="name"><%= link_to organization.name, organization.member %></h2>
-
-    <p>
-      <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.capitalize %></span>
-    </p>
+    <h2 property="name"><%= link_to organization.name, organization.member %>  <span class="label <%= organization.member.product_name %>"><%= organization.member.product_name.capitalize %></span></h2>
 
     <% if organization.cached_tagline.present? %>
       <p><strong><%= organization.cached_tagline %></strong></p>
@@ -18,7 +14,7 @@
     
     <div class='organization-description clearfix'>
       <p property="description"><%= organization_description(organization) %></p>
-      <%= link_to "#{organization.member == current_member ? "Edit" : "More"} information &raquo;".html_safe, organization.member, :class=>'btn btn-small btn-primary pull-right' %>
+      <%= link_to "#{organization.member == current_member ? "Edit" : "More"} information &raquo;".html_safe, organization.member, :class=>'btn btn-primary pull-right' %>
     </div>
   </div>
 
