Don't hide the <h2> in the list view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,10 @@
  *= require_tree .
  */
 
-.organization h2 {
+#singleview .organization h2 {
 	display: none;
 }
- 
+
  #terms {
 	 height: 200px;
 	 overflow-y: scroll;
