--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,6 @@
-<%= render :partial => 'organizations/organization', :locals => {:organization => @organization}%>
+<div id="singleview">
+	<%= render :partial => 'organizations/organization', :locals => {:organization => @organization}%>
+</div>
 
 <div style='clear:right'></div>
 
