--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
 		    				<li><a href="http://theodi.org/cookie-policy">Cookie Policy</a></li>
 		    				<li><a href="http://theodi.org/feedback">Feedback</a></li>
                 <% unless current_admin %>
-                  <li><%= link_to 'Adminstration', admin_omniauth_authorize_path(:google_apps) %></li>
+                  <li><%= link_to 'Administration', admin_omniauth_authorize_path(:google_apps) %></li>
                 <% end %>
 
 							</ul>
