--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -56,43 +56,45 @@
 
   </fieldset>
   
-  <fieldset>
+  <% unless current_admin %>
 
-    <legend>Change Password</legend>
+    <fieldset>
 
-    <div class="control-group">
-  		<%= f.label :password, :class => 'control-label' %>
-  		<div class="controls">
-  			<%= f.password_field :password %>
-  		</div>
-  	</div>
+      <legend>Change Password</legend>
+
+      <div class="control-group">
+    		<%= f.label :password, :class => 'control-label' %>
+    		<div class="controls">
+    			<%= f.password_field :password %>
+    		</div>
+    	</div>
   
-    <div class="control-group">
-  		<%= f.label :password_confirmation, :class => 'control-label' %>
-  		<div class="controls">
-  			<%= f.password_field :password_confirmation %>
-  		</div>
-  	</div>
+      <div class="control-group">
+    		<%= f.label :password_confirmation, :class => 'control-label' %>
+    		<div class="controls">
+    			<%= f.password_field :password_confirmation %>
+    		</div>
+    	</div>
   
-  </fieldset>
+    </fieldset>
 
-  <fieldset>
+    <fieldset>
 
-    <legend>Current Password</legend>
+      <legend>Current Password</legend>
     
-    <p>
-      We need your current password to confirm your changes.
-    </p>
+      <p>
+        We need your current password to confirm your changes.
+      </p>
 
-    <div class="control-group">
-      <%= f.label :current_password, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.password_field :current_password, :required => 'required' %>
-		<span class="help-inline">(required)</span>
+      <div class="control-group">
+        <%= f.label :current_password, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.password_field :current_password, :required => 'required' %>
+  		<span class="help-inline">(required)</span>
+        </div>
       </div>
-    </div>
-  </fieldset>
-
+    </fieldset>
+  <% end %>
 
   <% unless @member.cached_active %>
     <p class='alert alert-info'>
