--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,3 +1,8 @@
+<ul class="breadcrumb">
+  <li><%= link_to 'Members', members_path %></a> <span class="divider">/</span></li>
+  <li class="active"><%= @organization.name %></li>
+</ul>
+
 <div id="singleview">
 	<%= render :partial => 'organizations/organization', :locals => {:organization => @organization}%>
 </div>
